# test_gn

./: BUILD.gn  README.md  build.sh  conanfile.py  main.cpp  remotes.txt
src/hello/: hello.cpp
toolchains/: BUILD.gn
