toolchain("host") {
  toolchain_args = {
    cc = getenv("CC")
    cxx = getenv("CXX")
  }

  cc = "gcc"
  cxx = "g++"
  if (toolchain_args.cc != "") {
    cc = toolchain_args.cc
  }
  if (toolchain_args.cxx != "") {
    cxx = toolchain_args.cxx
  }

  tool("cc") {
    depfile = "{{output}}.d"
    command = "$cc -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_c}} -c {{source}} -o {{output}}"
    description = "CC {{output}}"
    outputs = [ "{{root_out_dir}}/obj/{{label_no_toolchain}}/{{source_name_part}}.o" ]
    depsformat = "gcc"
  }

  tool("cxx") {
    depfile = "{{output}}.d"
    command = "$cxx -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_cc}} -c {{source}} -o {{output}}"
    description = "CXX {{output}}"
    outputs = [ "{{root_out_dir}}/obj/{{label_no_toolchain}}/{{source_name_part}}.o" ]
    depsformat = "gcc"
  }

  tool("link") {
    command = "$cxx {{ldflags}} {{inputs}} {{solibs}} {{libs}} -o {{output}}"
    description = "LINK {{output}}"
    outputs = [ "{{root_out_dir}}/bin/{{target_output_name}}{{output_extension}}" ]
    default_output_dir = "{{root_out_dir}}/bin"
  }

  tool("alink") {
    command = "ar crs {{output}} {{inputs}}"
    description = "ALINK {{output}}"
    outputs = [ "{{root_out_dir}}/lib/lib{{target_output_name}}.a" ]
    default_output_dir = "{{root_out_dir}}/lib"
  }

  tool("solink") {
    command = "$cxx -shared {{ldflags}} {{inputs}} {{solibs}} {{libs}} -o {{output}}"
    description = "SOLINK {{output}}"
    outputs = [ "{{root_out_dir}}/lib/lib{{target_output_name}}.so" ]
    default_output_dir = "{{root_out_dir}}/lib"
  }

  tool("copy") {
    command = "cp -af {{source}} {{target_out_dir}}"
    description = "COPY {{source}} to {{target_out_dir}}"
  }

  tool("stamp") {
    command = "touch {{output}}"
    description = "STAMP {{output}}"
  }
}
